--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,4 +257,7 @@ article p {
     .blog-posts-list {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
+    .hero {
+        height: 65vh;
+    }
 }
